--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
-# .gitignore help prevent us from accidentally adding things we don't want to add
-
+# ignore packages installed by npm
 node_modules
 
-*~
-
-.DS_Store
+# put any other files you don't want to check in here,
+# such as .DS_Store (OSX), *.bak, etc.
